--- a/public/views/activity.html
+++ b/public/views/activity.html
@@ -12,10 +12,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href="../editor/activity/css/style.css" rel='stylesheet' type='text/css' />
 <script src="../editor/activity/js/jquery-1.11.1.min.js"></script>
 	<!-- Bootstrap core CSS -->
-	<link href="../css/bootstrap.min.css" rel="stylesheet">
+	<link href="../lib/bootstrap/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<!-- Custom styles for this template -->
-	<link href="../css/jquery.bxslider.css" rel="stylesheet">
+
 	<link href="../css/style.css" rel="stylesheet">
 	<link rel="icon" href="../images/favicon.ico">
 <!--webfonts-->
