--- a/public/views/admin/index.html
+++ b/public/views/admin/index.html
@@ -18,14 +18,14 @@ Purchase: http://wrapbootstrap.com
 
 
     <!--Basic Styles-->
-    <link href="../../css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../../lib/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link id="bootstrap-rtl-link" href="" rel="stylesheet" />
     <link href="../../css/font-awesome.min.css" rel="stylesheet" />
     <link href="../../css/weather-icons.min.css" rel="stylesheet" />
 
 
     <!--Beyond styles-->
-    <link href="../../css/beyond.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../lib/beyond/beyond.min.css" rel="stylesheet" type="text/css" />
     <link href="../../css/demo.min.css" rel="stylesheet" />
     <link href="../../css/typicons.min.css" rel="stylesheet" />
     <link href="../../css/animate.min.css" rel="stylesheet" />
@@ -484,17 +484,17 @@ Purchase: http://wrapbootstrap.com
     </div>
 
     <!--Basic Scripts-->
-    <script src="../../js/jquery.min.js"></script>
-    <script src="../../js/bootstrap.min.js"></script>
+    <script src="../../lib/jquery/jquery.min.js"></script>
+    <script src="../../lib/bootstrap/bootstrap.min.js"></script>
 
     <!--Beyond Scripts-->
-    <script src="../../js/beyond.min.js"></script>
+    <script src="../../lib/beyond/beyond.min.js"></script>
 
 
     <!--Page Related Scripts-->
     <!--Sparkline Charts Needed Scripts-->
-    <script src="../../js/sparkline/jquery.sparkline.js"></script>
-    <script src="../../js/sparkline/sparkline-init.js"></script>
+    <script src="../../lib/sparkline/jquery.sparkline.js"></script>
+    <script src="../../lib/sparkline/sparkline-init.js"></script>
 
 
 
