--- a/public/views/commentDetail.html
+++ b/public/views/commentDetail.html
@@ -12,10 +12,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../lib/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Custom styles for this template -->
-    <link href="../css/jquery.bxslider.css" rel="stylesheet">
+
     <link href="../css/style.css" rel="stylesheet">
     <link rel="icon" href="../images/favicon.ico">
     <script>
@@ -208,7 +208,7 @@
 <footer class="footer--empty"></footer>
 </div>
 <div class="loadingBar"></div>
-<script src="../js/jquery.min.js"></script>
+<script src="../lib/jquery/jquery.min.js"></script>
 <script type='text/javascript'>
 /* <![CDATA[ */
 var obvInit = {"api":"https:\/\/fatesinger.com\/__api\/","nonce":"4a8d3d57b4","user":"0","permalink":"https:\/\/fatesinger.com\/78012","id":"78012","single":"1","preview":"","webp":"image\/webp,*\/*;q=0.8"};
