--- a/public/views/myArticles.html
+++ b/public/views/myArticles.html
@@ -3,18 +3,16 @@
 <head>
     <!-- <%@ include file="common/header.jsp" %> -->
     <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<meta name="description" content="">
-<meta name="author" content="">
-<!-- Bootstrap core CSS -->
-<link href="../css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<!-- Custom styles for this template -->
-<link href="../css/jquery.bxslider.css" rel="stylesheet">
-<link href="../css/style.css" rel="stylesheet">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../images/favicon.ico">
+
+    <!-- Bootstrap core CSS -->
+    <link href="../lib/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <link href="../css/style.css" rel="stylesheet">
+
     <link rel="stylesheet" href="../styles/myArticle.css">
     <title>我的文章</title>
 </head>
@@ -108,8 +106,8 @@
         <i class="fa fa-copyright"></i> Copyright 2017. 杭州电子科技大学<br>
     </div>
 </footer>
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
+<script src="../lib/jquery/jquery.min.js"></script>
+<script src="../lib/bootstrap/bootstrap.min.js"></script>
 <script src="../scripts/myArticles.js"></script>
 </body>
 </html>
