--- a/public/views/renwu.html
+++ b/public/views/renwu.html
@@ -18,10 +18,10 @@ Purchase: http://wrapbootstrap.com
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../lib/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Custom styles for this template -->
-    <link href="../css/jquery.bxslider.css" rel="stylesheet">
+
     <link href="../css/style.css" rel="stylesheet">
     <link rel="icon" href="../images/favicon.ico">
     <link id="bootstrap-rtl-link" href="" rel="stylesheet" />
@@ -30,7 +30,7 @@ Purchase: http://wrapbootstrap.com
 
 
     <!--Beyond styles-->
-    <link href="../css/beyond.min.css" rel="stylesheet" type="text/css" />
+    <link href="../lib/beyond/beyond.min.css" rel="stylesheet" type="text/css" />
     <link href="../css/demo.min.css" rel="stylesheet" />
     <link href="../css/typicons.min.css" rel="stylesheet" />
     <link href="../css/animate.min.css" rel="stylesheet" />
@@ -467,17 +467,17 @@ Purchase: http://wrapbootstrap.com
 </div>
 
 <!--Basic Scripts-->
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
+<script src="../lib/jquery/jquery.min.js"></script>
+<script src="../lib/bootstrap/bootstrap.min.js"></script>
 
 <!--Beyond Scripts-->
-<script src="../js/beyond.min.js"></script>
+<script src="../lib/beyond/beyond.min.js"></script>
 
 
 <!--Page Related Scripts-->
 <!--Sparkline Charts Needed Scripts-->
-<script src="../js/sparkline/jquery.sparkline.js"></script>
-<script src="../js/sparkline/sparkline-init.js"></script>
+<script src="../lib/sparkline/jquery.sparkline.js"></script>
+<script src="../lib/sparkline/sparkline-init.js"></script>
 <script src="../js/pageNav.js"></script>
 <script>
     $("#addBTN").on("click",function () {
