--- a/public/views/taskList.html
+++ b/public/views/taskList.html
@@ -14,23 +14,20 @@ Purchase: http://wrapbootstrap.com
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <!-- Custom styles for this template -->
-    <link href="../css/jquery.bxslider.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
     <link rel="icon" href="../images/favicon.ico">
+    <!-- Bootstrap core CSS -->
+    <link href="../lib/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <link href="../css/style.css" rel="stylesheet">
+
     <link id="bootstrap-rtl-link" href="" rel="stylesheet" />
     <link href="../css/font-awesome.min.css" rel="stylesheet" />
     <link href="../css/weather-icons.min.css" rel="stylesheet" />
 
 
     <!--Beyond styles-->
-    <link href="../css/beyond.min.css" rel="stylesheet" type="text/css" />
+    <link href="../lib/beyond/beyond.min.css" rel="stylesheet" type="text/css" />
     <link href="../css/demo.min.css" rel="stylesheet" />
     <link href="../css/typicons.min.css" rel="stylesheet" />
     <link href="../css/animate.min.css" rel="stylesheet" />
@@ -410,17 +407,17 @@ Purchase: http://wrapbootstrap.com
 </div>
 
 <!--Basic Scripts-->
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
+<script src="../lib/jquery/jquery.min.js"></script>
+<script src="../lib/bootstrap/bootstrap.min.js"></script>
 
 <!--Beyond Scripts-->
-<script src="../js/beyond.min.js"></script>
+<script src="../lib/beyond/beyond.min.js"></script>
 
 
 <!--Page Related Scripts-->
 <!--Sparkline Charts Needed Scripts-->
-<script src="../js/sparkline/jquery.sparkline.js"></script>
-<script src="../js/sparkline/sparkline-init.js"></script>
+<script src="../lib/sparkline/jquery.sparkline.js"></script>
+<script src="../lib/sparkline/sparkline-init.js"></script>
 <script src="../js/pageNav.js"></script>
 
 <script>
