--- a/public/views/comments.html
+++ b/public/views/comments.html
@@ -8,14 +8,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../lib/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Custom styles for this template -->
-    <link href="../css/jquery.bxslider.css" rel="stylesheet">
+
     <link href="../css/style.css" rel="stylesheet">
     <link rel="icon" href="../images/favicon.ico">
     <!-- artDialog -->
-    <link href="../css/artDialog_simple.css" rel="stylesheet">
+    <link href="../lib/artDialog/artDialog_simple.css" rel="stylesheet">
     <!-- personal styles -->
     <link href="../styles/postList.css" rel="stylesheet">
 
@@ -111,10 +111,10 @@
         <i class="fa fa-copyright"></i> Copyright 2017. 杭州电子科技大学<br>
     </div>
 </footer>
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/jqPaginator.js"></script>
-<script src="../js/jquery.artDialog.js"></script>
+<script src="../lib/jquery/jquery.min.js"></script>
+<script src="../lib/bootstrap/bootstrap.min.js"></script>
+<script src="../lib/jqPaginator/jqPaginator.js"></script>
+<script src="../lib/artDialog/jquery.artDialog.js"></script>
 <script src="../scripts/comments.js"></script>
 </body>
 </html>
