--- a/public/views/login.html
+++ b/public/views/login.html
@@ -17,14 +17,12 @@
     <meta name="author" content="">
     <link rel="icon" href="../images/favicon.ico">
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../lib/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- artDialog -->
-    <link href="../css/artDialog_simple.css" rel="stylesheet">
+    <link href="../lib/artDialog/artDialog_simple.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="../css/jquery.bxslider.css" rel="stylesheet">
     <link href="../styles/register.css" rel="stylesheet">
 
     <title>登录</title>
@@ -77,7 +75,7 @@
     </div>
 </div>
 <script src="http://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="../js/jquery.artDialog.js"></script>
+<script src="../lib/artDialog/jquery.artDialog.js"></script>
 <script src="../js/xSlider.js"></script>
 <script src="../scripts/login.js"></script>
 </body>
