--- a/public/views/markdownEditor.html
+++ b/public/views/markdownEditor.html
@@ -11,7 +11,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="../lib/materialize/materialize.min.css" media="screen,projection"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../editor/css/editormd.css"/>
     <title>文章编辑</title>
@@ -140,8 +140,8 @@
     </div>
 </div>
 
-<script type="text/javascript" src="../js/jquery.min.js"></script>
-<script type="text/javascript" src="../js/materialize.min.js"></script>
+<script type="text/javascript" src="../lib/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="../lib/materialize/materialize.min.js"></script>
 <script src="../editor/js/editormd.min.js"></script>
 <script src="../js/ajaxfileupload.js"></script>
 <script type="text/javascript">
