--- a/public/views/postList.html
+++ b/public/views/postList.html
@@ -2,20 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<meta name="description" content="">
-<meta name="author" content="">
-<!-- Bootstrap core CSS -->
-<link href="../css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<!-- Custom styles for this template -->
-<link href="../css/jquery.bxslider.css" rel="stylesheet">
-<link href="../css/style.css" rel="stylesheet">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../images/favicon.ico">
+    <!-- Bootstrap core CSS -->
+    <link href="../lib/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!-- Custom styles for this template -->
+
+    <link href="../css/style.css" rel="stylesheet">
+
     <!-- artDialog -->
-    <link href="../css/artDialog_simple.css" rel="stylesheet">
+    <link href="../lib/artDialog/artDialog_simple.css" rel="stylesheet">
     <!-- personal styles -->
    <link href="../styles/postList.css" rel="stylesheet">
 
@@ -112,10 +110,10 @@
         <i class="fa fa-copyright"></i> Copyright 2017. 杭州电子科技大学<br>
     </div>
 </footer>
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/jqPaginator.js"></script>
-<script src="../js/jquery.artDialog.js"></script>
+<script src="../lib/jquery/jquery.min.js"></script>
+<script src="../lib/bootstrap/bootstrap.min.js"></script>
+<script src="../lib/jqPaginator/jqPaginator.js"></script>
+<script src="../lib/artDialog/jquery.artDialog.js"></script>
 <script src="../scripts/postList.js"></script>
 </body>
 </html>
