--- a/public/views/userInfo.html
+++ b/public/views/userInfo.html
@@ -11,13 +11,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../images/favicon.ico">
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../lib/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="../css/style.css" rel="stylesheet">
 
     <link href="../styles/userInfo.css" rel="stylesheet">
-    <link rel="icon" href="../images/favicon.ico">
+
     <title>个人档案</title>
 </head>
 <body>
@@ -105,9 +106,9 @@
         <i class="fa fa-copyright"></i> Copyright 2017. 杭州电子科技大学<br>
     </div>
 </footer>
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/template.js"></script>
+<script src="../lib/jquery/jquery.min.js"></script>
+<script src="../lib/bootstrap/bootstrap.min.js"></script>
+<script src="../lib/art-template/template.js"></script>
 <script type="text/html" id="base_form">
     <form class="form-horizontal" role="form">
         <div class="form-group">
