--- a/public/views/markdownEditor.html
+++ b/public/views/markdownEditor.html
@@ -60,32 +60,33 @@
                         <div class="form-horizontal form-bordered" id="articleF" hidden>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input type="text" name="artTitle" id="artTitle" value="${article.art_title}" class="validate">
+                                    <input type="text" name="artTitle" id="artTitle" value="" class="validate">
                                     <label for="artTitle">文章标题：</label>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input type="text" name="label" id="label" value="${article.label}" class="validate">
-                                    <label for="label">标签（多个用，隔开）</label>
-                                </div>
-                            </div>
-                            <input type="hidden" id="articleId" value="${article.art_id}">
-                       <div class="form-group">
-                                <div class="col-sm-offset-2 col-sm-10">
-                                    <div class="col-xs-8">
-                                        <div class="file-field input-field">
-                                            <input type="file" accept="image/gif,image/jpeg,image/jpg,image/png,image/svg" id="file" name="file">
-                                        <div class="file-path-wrapper">
-                                            <input class="file-path validate" type="text" id="coverName" value="${article.cover}">
-                                            <label for="file">请选择封面图片</label>
+                            <input type="hidden" id="articleId" value="">
+                            <!-- <div class="row">
+                                 <div class="input-field col s12">
+                                     <input type="text" name="label" id="label" value="" class="validate">
+                                     <label for="label">标签（多个用，隔开）</label>
+                                 </div>
+                             </div>
+
+                        <div class="form-group">
+                                 <div class="col-sm-offset-2 col-sm-10">
+                                     <div class="col-xs-8">
+                                         <div class="file-field input-field">
+                                             <input type="file" accept="image/gif,image/jpeg,image/jpg,image/png,image/svg" id="file" name="file">
+                                         <div class="file-path-wrapper">
+                                             <input class="file-path validate" type="text" id="coverName" value="">
+                                             <label for="file">请选择封面图片</label>
+                                          </div>
                                          </div>
-                                        </div>
-                                    </div>
-                                    <button style="background-color: #2bbbad;border-width:1px;" onclick="uploadCover()" >上传封面</button>
-                                    <input type="hidden" id="coverAddress">
-                                </div>
-                            </div>
+                                     </div>
+                                     <button style="background-color: #2bbbad;border-width:1px;" onclick="uploadCover()" >上传封面</button>
+                                     <input type="hidden" id="coverAddress">
+                                 </div>
+                             </div>-->
                         </div>
 
                         <div class="form-horizontal form-bordered" id="noticeF" hidden>
@@ -122,7 +123,7 @@
     </div>
     <div class="page-body">
         <div id="test-editormd">
-            <textarea style="display:none;">${article.content}</textarea>
+            <textarea style="display:none;"></textarea>
         </div>
     </div>
     <!-- /Page Body -->
@@ -144,7 +145,7 @@
 <script type="text/javascript" src="../lib/materialize/materialize.min.js"></script>
 <script src="../editor/js/editormd.min.js"></script>
 <script src="../js/ajaxfileupload.js"></script>
-<script type="text/javascript" src="../js/markdownEditor.js"></script>
+<script type="text/javascript" src="../scripts/markdownEditor.js"></script>
 
 </body>
 </html>
