--- a/public/views/planList.html
+++ b/public/views/planList.html
@@ -62,7 +62,7 @@ Purchase: http://wrapbootstrap.com
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li id="index"><a href="../index.html">首页</a></li>
-                <li id="post"><a href="postList.html">成果展示</a></li>
+                <li id="post"><a href="postList.html">文章分享</a></li>
 
                 <li id="resource"><a href="resource.html">资源下载</a></li>
                 <li><a href="markdownEditor.html">发布</a></li>
