--- a/public/views/postList.html
+++ b/public/views/postList.html
@@ -43,7 +43,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li id="index"><a href="../index.html">首页</a></li>
-                <li id="post"><a href="postList.html">成果展示</a></li>
+                <li id="post"><a href="postList.html">文章分享</a></li>
                 <li id="activityPage"><a href="activity.html">活动展示</a> </li>
                 <li id="resource"><a href="resource.html">资源下载</a></li>
                 <li id="commentPage"><a href="comments.html">讨论区</a></li>
