--- a/public/views/postList.html
+++ b/public/views/postList.html
@@ -21,15 +21,6 @@
 </head>
 <body>
 <!-- Navigation -->
-<style>
-    .dropdown-menu{
-        background-color: #222222;
-    }
-
-    .dropdown-menu>li>a{
-        color:#fff;
-    }
-</style>
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -42,26 +33,25 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li id="index"><a href="../index.html">首页</a></li>
-                <li id="post"><a href="postList.html">文章分享</a></li>
-                <li id="activityPage"><a href="activity.html">活动展示</a> </li>
-                <li id="resource"><a href="resource.html">资源下载</a></li>
-                <li id="commentPage"><a href="comments.html">讨论区</a></li>
-                <li><a href="markdownEditor.html">发布</a></li>
+                <li id="index"><a href="index.html">首页</a></li>
+                <li id="post"><a href="views/postList.html">文章分享</a></li>
+                <li id="activityPage"><a href="views/activity.html">活动展示</a> </li>
+                <li id="resource"><a href="views/resource.html">资源下载</a></li>
+                <li id="commentPage"><a href="views/comments.html">讨论区</a></li>
+                <li id="publish"><a href="views/markdownEditor.html">发布</a></li>
+                <li><a href="views/renwu.html">老师查看</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
 
-                    <li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">username <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/myArticles">我的文章</a></li>
-                            <li><a href="/setting">个人档案</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="/logout">退出</a></li>
-                    <li><a href="/login">登录</a> </li>
-                    <li><a href="/register">注册</a> </li>
-
+                <li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" id="username"><b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="views/myArticles.html">我的文章</a></li>
+                        <li><a href="views/userInfo.html">个人档案</a></li>
+                    </ul>
+                </li>
+                <li id="logout"><a href="views/login.html">退出</a></li>
+                <li id="login"><a href="views/login.html">登录</a> </li>
             </ul>
 
         </div>
@@ -69,8 +59,8 @@
     </div>
 </nav>
 <!-- contanier -->
-<div class="container">
-    <section style="margin-top: 35px;">
+<div class="container" id="postListContainer">
+   <!-- <section style="margin-top: 35px;">
                 <div class="col-md-8 ">
                     <article class="blog-post">
                         <div class="blog-post-body">
@@ -89,7 +79,7 @@
 
                             </div>
                             <p>${article.artIntro}</p>
-                            <!-- <p>最近几年，随着比特币的兴起并不断走高的价格，越来越多的投资者和机构开始对数字货币这一新兴概念产生了兴趣。由比特币创建并使用的区块链技术也获得了从创业公司到金融巨头的广泛关注和参与。</p> -->
+                         <p>最近几年，随着比特币的兴起并不断走高的价格，越来越多的投资者和机构开始对数字货币这一新兴概念产生了兴趣。由比特币创建并使用的区块链技术也获得了从创业公司到金融巨头的广泛关注和参与。</p>
                             <a href="postDetail.html"><button type="button" class="btn btn-success">继续阅读 >></button></a>
                         </div>
                     </article>
@@ -97,12 +87,12 @@
         <div style="text-align:center">
             <ul class="pagination" id="pagination" ></ul>
         </div>
-        <input type="hidden" value="${pageCount}" id="pageCount"/>
-        <input type="hidden" value="${postCount}" id="postCount">
-        <input type="hidden" value="${currentPage}" id="currentPage">
+        <input type="hidden" value="" id="pageCount"/>
+        <input type="hidden" value="" id="postCount">
+        <input type="hidden" value="" id="currentPage">
        <!-- <input type="hidden" value="" id="searchType"/>
         <input type="hidden" value="" id="searchValue"/>  -->
-    </section>
+    </section> -->
 </div>
 <!-- /.contanier -->
 <footer class="footer">
@@ -110,10 +100,38 @@
         <i class="fa fa-copyright"></i> Copyright 2017. 杭州电子科技大学<br>
     </div>
 </footer>
+<script id="postList" type="text/html">
+    <section style="margin-top: 35px;">
+        {{each postLists as post i}}
+        <div class="col-md-8 ">
+            <article class="blog-post">
+                <div class="blog-post-body">
+                    <h3>
+                        <a href="">{{post.title}}</a>
+                    </h3>
+                    <div class="post-meta">
+                        <!--<span>by <a href="#">{post.author}</a></span>
+                        /-->
+                        <span><i class="fa fa-clock-o"></i>{{post.created_at}}</span>
+                        /
+                        <span><i class="fa fa-comment-o"></i> 1</span>
+
+                    </div>
+                    <p>{{post.content}}</p>
+                    <!-- <p>最近几年，随着比特币的兴起并不断走高的价格，越来越多的投资者和机构开始对数字货币这一新兴概念产生了兴趣。由比特币创建并使用的区块链技术也获得了从创业公司到金融巨头的广泛关注和参与。</p> -->
+                    <a href="postDetail.html"><button type="button" class="btn btn-success">继续阅读 >></button></a>
+                </div>
+            </article>
+        </div>
+        {{/each}}
+    </section>
+</script>
+<script src="../lib/art-template/template.js"></script>
 <script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/bootstrap/bootstrap.min.js"></script>
 <script src="../lib/jqPaginator/jqPaginator.js"></script>
 <script src="../lib/artDialog/jquery.artDialog.js"></script>
+<script src="../scripts/nav.js"></script>
 <script src="../scripts/postList.js"></script>
 </body>
 </html>
