--- a/public/views/userInfo.html
+++ b/public/views/userInfo.html
@@ -25,8 +25,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -35,27 +34,25 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li id="index"><a href="../index.html">首页</a></li>
-                <li id="post"><a href="postList.html">文章分享</a></li>
-                <li id="activityPage"><a href="activity.html">活动展示</a></li>
-                <li id="resource"><a href="resource.html">资源下载</a></li>
-                <li id="commentPage"><a href="comments.html">讨论区</a></li>
-                <li><a href="markdownEditor.html">发布</a></li>
+                <li id="index"><a href="index.html">首页</a></li>
+                <li id="post"><a href="views/postList.html">文章分享</a></li>
+                <li id="activityPage"><a href="views/activity.html">活动展示</a> </li>
+                <li id="resource"><a href="views/resource.html">资源下载</a></li>
+                <li id="commentPage"><a href="views/comments.html">讨论区</a></li>
+                <li id="publish"><a href="views/markdownEditor.html">发布</a></li>
+                <li><a href="views/renwu.html">老师查看</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
 
-                <li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle"
-                                                      data-toggle="dropdown">username <b class="caret"></b></a>
+                <li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" id="username"><b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/myArticles">我的文章</a></li>
-                        <li><a href="userInfo.html">个人档案</a></li>
+                        <li><a href="views/myArticles.html">我的文章</a></li>
+                        <li><a href="views/userInfo.html">个人档案</a></li>
                     </ul>
                 </li>
-                <li><a href="/logout">退出</a></li>
-                <li><a href="/login">登录</a></li>
-                <li><a href="/register">注册</a></li>
-
+                <li id="logout"><a href="views/login.html">退出</a></li>
+                <li id="login"><a href="views/login.html">登录</a> </li>
             </ul>
 
         </div>
@@ -169,7 +166,7 @@
     <div class="row">
         <div class="col-md-offset-1">
             <div class="info_name">姓名:</div>
-            <span id="username">{{username}}</span>
+            <span id="user_name">{{username}}</span>
         </div>
     </div>
     <div class="row">
@@ -219,7 +216,7 @@
 <script id="planList" type="text/html">
     <table class="table">
         <th>开始-截止时间</th><th>计划详情</th>
-        {{each planList as plan i}}
+        {{each planLists as plan i}}
             <tr>
                     <td>{{plan.date}}</td>
                     <td>{{plan.content}}</td>
@@ -227,116 +224,7 @@
         {{/each}}
     </table>
 </script>
-
-<script>
-    $("#info_save").hide();
-    $("#info_cancel").hide();
-//初始化
-var userInfo = {
-    username:"马晓婷",
-    user_sex:'女',
-    std_id:'15051304',
-    std_school:'计算机学院',
-    std_identity:'本科生',
-    birth:'1997-10-1',
-    phone:'18888888888',
-    description:'不忘初心，不忘微笑'
-};
-var base_content = template('base_content', userInfo);
-document.getElementById('userInfo').innerHTML = base_content;
-
-//编辑
-    $("#info_edit").click(function () {
-        getContent();
-    });
-
-    //保存按钮
-    $("#info_save").click(function () {
-        getForm();
-    });
-
-    $("#info_cancel").click(function () {
-        $("#info_save").toggle();
-        $("#info_cancel").toggle();
-        $("#info_edit").toggle();
-
-        //从后台获取数据
-    });
-
-    //获取计划列表
-    var list = {
-        planList:[{
-            date:'2017.10.22-2017.12.12',
-            content:'学习软件设计模式'
-        },
-            {
-                date:'2017.9.12-2017.10.20',
-                content:'node.js + Express'
-            }
-        ]
-    };
-
-    var plan = template('planList', list);
-    $("#planContainer").html(plan);
-
-    function getContent() {
-        $("#info_save").toggle();
-        $("#info_cancel").toggle();
-        $("#info_edit").toggle();
-
-        var username = $("#username").text();
-        var user_sex = $("#user_sex").text();
-        var std_id = $("#std_id").text();
-        var std_school = $("#std_school").text();
-        var std_identity = $("#std_identity").text();
-        var birth = $("#birth").text();
-        var phone = $("#phone").text();
-        var description = $("#description").text();
-        var putInfo = {
-            f_name:username,
-            f_sex:user_sex,
-            f_stdId:std_id,
-            f_school:std_school,
-            f_identity:std_identity,
-            f_birth:birth,
-            f_phone:phone,
-            f_description:description
-        };
-        var base_form = template('base_form', putInfo);
-        document.getElementById('userInfo').innerHTML = base_form;
-    }
-
-    function getForm() {
-        $("#info_save").toggle();
-        $("#info_cancel").toggle();
-        $("#info_edit").toggle();
-
-        var f_name = $("#f_name").val();
-        var f_sex = $("#f_sex").val();
-        var f_stdId = $("#f_stdId").val();
-        var f_school = $("#f_school").val();
-        var f_identity = $("#f_identity").val();
-        var f_birth = $("#f_birth").val();
-        var f_phone = $("#f_phone").val();
-        var f_description = $("#f_description").val();
-
-        //先把数据发送到后台
-
-
-        userInfo = {
-            username:f_name,
-            user_sex:f_sex,
-            std_id:f_stdId,
-            std_school:f_school,
-            std_identity:f_identity,
-            birth:f_birth,
-            phone:f_phone,
-            description:f_description
-        };
-
-        var base_content = template('base_content', userInfo);
-        document.getElementById('userInfo').innerHTML = base_content;
-    }
-</script>
+<script src="../scripts/nav.js"></script>
+<script src="../scripts/userInfo.js"></script>
 </body>
 </html>
