修改接口、页面菜单栏

--- a/public/views/postList.html
+++ b/public/views/postList.html
@@ -33,13 +33,13 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li id="index"><a href="index.html">首页</a></li>
-                <li id="post"><a href="views/postList.html">文章分享</a></li>
-                <li id="activityPage"><a href="views/activity.html">活动展示</a> </li>
-                <li id="resource"><a href="views/resource.html">资源下载</a></li>
-                <li id="commentPage"><a href="views/comments.html">讨论区</a></li>
-                <li id="publish"><a href="views/markdownEditor.html">发布</a></li>
-                <li><a href="views/renwu.html">老师查看</a></li>
+                <li id="index"><a href="../index.html">首页</a></li>
+                <li id="post"><a href="postList.html">文章分享</a></li>
+                <li id="activityPage"><a href="activity.html">活动展示</a> </li>
+                <li id="resource"><a href="resource.html">资源下载</a></li>
+                <li id="commentPage"><a href="comments.html">讨论区</a></li>
+                <li id="publish"><a href="markdownEditor.html">发布</a></li>
+                <li><a href="renwu.html">老师查看</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
