--- a/public/views/taskList.html
+++ b/public/views/taskList.html
@@ -34,20 +34,12 @@ Purchase: http://wrapbootstrap.com
     <link id="skin-link" href="" rel="stylesheet" type="text/css" />
     <link href="../css/public.css" rel="stylesheet" />
     <link href="../css/pageNav.css" type="text/css" rel="stylesheet"/>
+    <link href="../styles/taskList.css">
 </head>
 <!-- /Head -->
 <!-- Body -->
 <body>
 <!-- Navigation -->
-<style>
-    .dropdown-menu{
-        background-color: #222222;
-    }
-
-    .dropdown-menu>li>a{
-        color:#fff;
-    }
-</style>
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -61,25 +53,24 @@ Purchase: http://wrapbootstrap.com
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li id="index"><a href="../index.html">首页</a></li>
-                <li id="post"><a href="postList.html">成果展示</a></li>
-
+                <li id="post"><a href="postList.html">文章分享</a></li>
+                <li id="activityPage"><a href="activity.html">活动展示</a> </li>
                 <li id="resource"><a href="resource.html">资源下载</a></li>
-                <li><a href="markdownEditor.html">发布</a></li>
-                <li><a href="comments.html">讨论区</a></li>
+                <li id="commentPage"><a href="comments.html">讨论区</a></li>
+                <li id="publish"><a href="markdownEditor.html">发布</a></li>
+                <li><a href="renwu.html">老师查看</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
 
-                <li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">username <b class="caret"></b></a>
+                <li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" id="username"><b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/myArticles">我的文章</a></li>
-                        <li><a href="/setting">个人档案</a></li>
+                        <li><a href="views/myArticles.html">我的文章</a></li>
+                        <li><a href="views/userInfo.html">个人档案</a></li>
                     </ul>
                 </li>
-                <li><a href="/logout">退出</a></li>
-                <li><a href="/login">登录</a> </li>
-                <li><a href="/register">注册</a> </li>
-
+                <li id="logout"><a href="views/login.html">退出</a></li>
+                <li id="login"><a href="views/login.html">登录</a> </li>
             </ul>
 
         </div>
@@ -419,13 +410,8 @@ Purchase: http://wrapbootstrap.com
 <script src="../lib/sparkline/jquery.sparkline.js"></script>
 <script src="../lib/sparkline/sparkline-init.js"></script>
 <script src="../js/pageNav.js"></script>
-
-<script>
-    $(".editComment").on("click",function () {
-        $("#pingjia").css("display","block");
-    });
-
-</script>
+<script src="../scripts/nav.js"></script>
+<script src="../scripts/taskList.js"></script>
 </body>
 <!--  /Body -->
 </html>
