--- a/public/views/resource.html
+++ b/public/views/resource.html
@@ -112,7 +112,7 @@
 <script src="../lib/bootstrap/bootstrap.min.js"></script>
 <script src="../js/ajaxfileupload.js"></script>
 <script src="../js/mooz.scripts.min.js"></script>
-<script src="../js/basic.js"></script>
+<!--<script src="../js/basic.js"></script>-->
 <script src="../scripts/resource.js"></script>
 </body>
 
