--- a/public/views/renwu.html
+++ b/public/views/renwu.html
@@ -102,8 +102,8 @@ Purchase: http://wrapbootstrap.com
         <div class="page-body">
             <div class="row">
                 <div class="col-md-12">
-                        <input id="fileSelect" type="file" accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" />
-                    <a class="btn btn-primary pull-right" id="impotInfor">导入学生信息</a>
+                        <input id="file" name="file" multiple type="file" accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" />
+                    <a href="javascript:;" class="btn btn-primary pull-right" id="impotInfor">导入学生信息</a>
                 </div>
             </div>
             <div class="row" >
@@ -486,6 +486,7 @@ Purchase: http://wrapbootstrap.com
 <script src="../lib/sparkline/jquery.sparkline.js"></script>
 <script src="../lib/sparkline/sparkline-init.js"></script>
 <script src="../js/pageNav.js"></script>
+<script src="../scripts/nav.js"></script>
 <script src="../js/ajaxfileupload.js"></script>
 <script src="../scripts/renwu.js"></script>
 <script>
