--- a/public/views/activity.html
+++ b/public/views/activity.html
@@ -57,17 +57,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</ul>
 
 			<ul class="nav navbar-nav navbar-right">
-
-				<li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">username <b class="caret"></b></a>
+				<li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" id="username"><b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="/myArticles">我的文章</a></li>
+						<li><a href="myArticles.html">我的文章</a></li>
 						<li><a href="userInfo.html">个人档案</a></li>
 					</ul>
 				</li>
-				<li><a href="/logout">退出</a></li>
-				<li><a href="/login">登录</a> </li>
-				<li><a href="/register">注册</a> </li>
-
+				<li id="logout"><a href="login.html">退出</a></li>
+				<li id="login"><a href="login.html">登录</a> </li>
 			</ul>
 
 		</div>
@@ -192,6 +189,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!--gallery-->
 	</section>
 </div>
+<script src="../scripts/nav.js"></script>
 <script src="../scripts/activity.js"></script>
 </body>
 </html>
