--- a/public/views/commentDetail.html
+++ b/public/views/commentDetail.html
@@ -61,16 +61,14 @@
 
             <ul class="nav navbar-nav navbar-right">
 
-                <li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">username <b class="caret"></b></a>
+                <li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" id="username"><b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/myArticles">我的文章</a></li>
-                        <li><a href="/setting">个人档案</a></li>
+                        <li><a href="myArticles.html">我的文章</a></li>
+                        <li><a href="userInfo.html">个人档案</a></li>
                     </ul>
                 </li>
-                <li><a href="/logout">退出</a></li>
-                <li><a href="/login">登录</a> </li>
-                <li><a href="/register">注册</a> </li>
-
+                <li id="logout"><a href="login.html">退出</a></li>
+                <li id="login"><a href="login.html">登录</a> </li>
             </ul>
 
         </div>
@@ -214,6 +212,7 @@
 var obvInit = {"api":"https:\/\/fatesinger.com\/__api\/","nonce":"4a8d3d57b4","user":"0","permalink":"https:\/\/fatesinger.com\/78012","id":"78012","single":"1","preview":"","webp":"image\/webp,*\/*;q=0.8"};
 /* ]]> */
 </script>
+<script src="../scripts/nav.js"></script>
 <script type='text/javascript' src='../js/comment.js'></script>
 <script src="../scripts/commentDetail.js"></script>
 </body>
