--- a/public/views/planList.html
+++ b/public/views/planList.html
@@ -71,16 +71,14 @@ Purchase: http://wrapbootstrap.com
 
             <ul class="nav navbar-nav navbar-right">
 
-                <li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">username <b class="caret"></b></a>
+                <li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" id="username"><b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/myArticles">我的文章</a></li>
-                        <li><a href="/setting">个人档案</a></li>
+                        <li><a href="myArticles.html">我的文章</a></li>
+                        <li><a href="userInfo.html">个人档案</a></li>
                     </ul>
                 </li>
-                <li><a href="/logout">退出</a></li>
-                <li><a href="/login">登录</a> </li>
-                <li><a href="/register">注册</a> </li>
-
+                <li id="logout"><a href="login.html">退出</a></li>
+                <li id="login"><a href="login.html">登录</a> </li>
             </ul>
 
         </div>
@@ -348,6 +346,7 @@ Purchase: http://wrapbootstrap.com
 <!--Sparkline Charts Needed Scripts-->
 <script src="../lib/sparkline/jquery.sparkline.js"></script>
 <script src="../lib/sparkline/sparkline-init.js"></script>
+<script src="../scripts/nav.js"></script>
 <script src="../js/pageNav.js"></script>
 
 
