--- a/public/views/postList.html
+++ b/public/views/postList.html
@@ -46,12 +46,12 @@
 
                 <li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" id="username"><b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="views/myArticles.html">我的文章</a></li>
-                        <li><a href="views/userInfo.html">个人档案</a></li>
+                        <li><a href="myArticles.html">我的文章</a></li>
+                        <li><a href="userInfo.html">个人档案</a></li>
                     </ul>
                 </li>
-                <li id="logout"><a href="views/login.html">退出</a></li>
-                <li id="login"><a href="views/login.html">登录</a> </li>
+                <li id="logout"><a href="login.html">退出</a></li>
+                <li id="login"><a href="login.html">登录</a> </li>
             </ul>
 
         </div>
